--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "chat for members",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./bin/www",
-    "devstart": "nodemon ./bin/www",
-    "serverstart": "DEBUG=only-members:* npm run devstart"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -22,12 +19,14 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.12.2",
     "helmet": "^4.6.0",
+    "http-errors": "^1.8.0",
     "mongoose": "^6.0.9",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.13",
