--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "description": "chat for members",
   "main": "app.js",
   "scripts": {
+    "dev": "nodemon app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,8 +32,10 @@
     "helmet": "^4.6.0",
     "http-errors": "^1.8.0",
     "mongoose": "^6.0.9",
-    "nodemon": "^2.0.13",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.13"
   }
 }
